Trying the callysto logo only moving jupyter to partners
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -9,16 +9,28 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-6 text-center">
+            <div class="col-lg-3 col-md-3 text-center">
+                <div class="partners-box">
+                    <a href="https://www.cybera.ca/" target="_blank" >
+                    <img src="/img/cybera-main.jpg" class="wow zoomIn" alt="" id="cybera"></a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 text-center">
                 <div class="partners-box">
                     <a href="http://www.pims.math.ca/" target="_blank" >
                     <img src="/img/portfolio/PIMS-circle-with-wordmark-CAPS.png" class="wow zoomIn" alt=""></a>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 text-center">
+            <div class="col-lg-3 col-md-3 text-center">
                 <div class="partners-box">
-                    <a href="https://www.cybera.ca/" target="_blank" >
-                    <img src="/img/cybera-main.jpg" class="wow zoomIn" alt="" id="cybera"></a>
+                    <a href="http://jupyter.org/" target="_blank" >
+                    <img src="/img/portfolio/jupyter-logo.svg" class="wow zoomIn" alt=""></a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 text-center">
+                <div class="partners-box">
+                    <a href="https://www.canada.ca/en/innovation-science-economic-development/programs/science-technology-partnerships/cancode.html" target="_blank" >
+                    <img src="/img/portfolio/canada-funding.png" class="wow zoomIn" id="canada-funding" alt=""></a>
                 </div>
             </div>
         </div>
