--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -9,25 +9,28 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-3 text-center">
+            <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
                     <a href="https://www.cybera.ca/" target="_blank" >
-                    <img src="/img/cybera-main.jpg" class="wow zoomIn" alt="" id="cybera"></a>
+                    <img src="/img/portfolio/cybera-logo.png" class="wow zoomIn" alt="" id="cybera"></a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 text-center">
+            <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
                     <a href="http://www.pims.math.ca/" target="_blank" >
                     <img src="/img/portfolio/PIMS-circle-with-wordmark-CAPS.png" class="wow zoomIn" alt=""></a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 text-center">
+            <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
                     <a href="http://jupyter.org/" target="_blank" >
                     <img src="/img/portfolio/jupyter-logo.svg" class="wow zoomIn" alt=""></a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 text-center">
+        </div>
+        <hr class="primary">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-lg-offset-4 text-center">
                 <div class="partners-box">
                     <a href="https://www.canada.ca/en/innovation-science-economic-development/programs/science-technology-partnerships/cancode.html" target="_blank" >
                     <img src="/img/portfolio/canada-funding.png" class="wow zoomIn" id="canada-funding" alt=""></a>
