Adding support links and adjusting a template runner for local testing
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,13 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="http://intro.syzygy.ca">Tutorial</a>
+                  <a class="" href="mailto:{{ site.email }}">Support <i class="fa fa-envelope"></i></a>
+                </li>
+                <li>
+                  <a class="" href="http://callysto.ca">callysto.ca <i class="fa fa-external-link"></i></a>
+                </li>
+                <li>
+                    <a class="" href="http://intro.syzygy.ca">Tutorial</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#partners">Partners</a>
