--- a/_includes/terms.html
+++ b/_includes/terms.html
@@ -5,6 +5,7 @@
                 <h2 class="section-heading hidden">Terms and conditions/Privacy policy</h2>
                 <!-- <hr class="light"> -->
                 <p class="text">{{ site.terms }}</p>
+                <p class="text">Questions? <a href="mailto:{{ site.email }}">Contact us</a></p>
             </div>
         </div>
     </div>
