--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
                 <div class="funding-box">
                 <h2 class="section-heading hidden">About Jupyter</h2>
                 <!-- <hr class="light"> -->
-                <p class="text"><i class="fa fa-info-circle" aria-hidden="true"></i> <a href="https://callysto.ca">Callysto website</a></p>
+                <p class="text"><i class="fa fa-info-circle" aria-hidden="true"></i> <a href="https://cybera.ca">Cybera website</a></p>
                 <p class="text"><i class="fa fa-book" aria-hidden="true"></i> Interactive computing notebooks</p>
                 <p class="text"><i class="fa fa-cloud" aria-hidden="true"></i> Research tools accessed via browser</p>
                 <p class="text"><i class="fa fa-flask" aria-hidden="true"></i> Python 3, R </p>
