--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                   <a class="" href="mailto:{{ site.email }}">Support <i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a class="" href="http://callysto.ca">callysto.ca <i class="fa fa-external-link"></i></a>
+                  <a class="" href="#">CARES <i class="fa fa-external-link"></i></a>
                 </li>
                 <li>
                     <a class="" href="http://intro.syzygy.ca">Tutorial</a>
