--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Brought to Canada's Research Community by</h2>
+                <h2 class="section-heading">Brought to Canada's Startup Community by</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -17,23 +17,14 @@
             </div>
             <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
-                    <a href="http://www.pims.math.ca/" target="_blank" >
-                    <img src="/img/portfolio/PIMS-circle-with-wordmark-CAPS.png" class="wow zoomIn" alt=""></a>
+                    <a href="#" target="_blank" >
+                    <img src="/img/portfolio/goa-logo.svg.png" class="wow zoomIn" alt=""></a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
                     <a href="http://jupyter.org/" target="_blank" >
                     <img src="/img/portfolio/jupyter-logo.svg" class="wow zoomIn" alt=""></a>
-                </div>
-            </div>
-        </div>
-        <hr class="primary">
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-lg-offset-4 text-center">
-                <div class="partners-box">
-                    <a href="https://www.canada.ca/en/innovation-science-economic-development/programs/science-technology-partnerships/cancode.html" target="_blank" >
-                    <img src="/img/portfolio/canada-funding.png" class="wow zoomIn" id="canada-funding" alt=""></a>
                 </div>
             </div>
         </div>
