--- a/_includes/languages.html
+++ b/_includes/languages.html
@@ -1,17 +1,22 @@
-<section class="primary" id="languages">   
+<section class="primary" id="languages">
     <div class="container">
         <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+              <p>This platform runs on the following data science languages.</p>
+            </div>
             <div class="col-lg-6 col-md-6 text-center">
                 <div class="partners-box">
                     <a href="https://www.python.org/" target="_blank" >
                     <img src="/img/portfolio/python-logo.png" class="wow zoomIn" alt=""></a>
                 </div>
+                Python
             </div>
             <div class="col-lg-6 col-md-6 text-center">
                 <div class="partners-box">
                     <a href="https://www.r-project.org/" target="_blank" >
                     <img src="/img/portfolio/r-logo.svg" class="wow zoomIn" alt=""></a>
                 </div>
+                R
             </div>
         </div>
     </div>
