--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Brought to Canada's Startup Community by</h2>
+                <h2 class="section-heading">This project is brought to you with support from</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -17,7 +17,7 @@
             </div>
             <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
-                    <a href="#" target="_blank" >
+                    <a href="http://economic.alberta.ca/" target="_blank" >
                     <img src="/img/portfolio/goa-logo.svg.png" class="wow zoomIn" alt=""></a>
                 </div>
             </div>
