--- a/_includes/project.html
+++ b/_includes/project.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="{{ site.url }}/jupyter/hub" target="_blank" >
-          <img src="/img/portfolio/jupyter-logo.png" class="wow zoomIn" id="callysto" alt="">
-        </a>
+        <h2>Welcome to the Data Science for Entrepreneurs JupyterHub</h2>
+        <br><br>
+        <p>Cybera’s Data Science for Entrepreneurs project provides Alberta entrepreneurs, businesses and social enterprises with training and access to data science expertise. This Jupyter notebook portal (JupyterHub) provides you with free access to work on data science projects and increases easy collaboration across your organization.</p>
        </div>
     </div>
   </div>
