Initial commit for Amii

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                   <a class="" href="mailto:{{ site.email }}">Support <i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a class="" href="http://www.cybera.ca/services/data-science/data-science-for-entrepreneurs/">Data Science for Entrepreneurs <i class="fa fa-external-link"></i></a>
+                  <a class="" href="https://amii.ca">Amii<i class="fa fa-external-link"></i></a>
                 </li>
                 <li>
                     <a class="" href="http://intro.syzygy.ca">Tutorial</a>
