--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -17,8 +17,8 @@
             </div>
             <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
-                    <a href="http://economic.alberta.ca/" target="_blank" >
-                    <img src="/img/portfolio/goa-logo.svg.png" class="wow zoomIn" alt=""></a>
+                    <a href="https://amii.ca" target="_blank" >
+                    <img src="/img/portfolio/Amii-colour-logo.png" class="wow zoomIn" alt=""></a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 text-center">
