--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -18,7 +18,7 @@
             <div class="col-lg-4 col-md-4 text-center">
                 <div class="partners-box">
                     <a href="https://amii.ca" target="_blank" >
-                    <img src="/img/portfolio/Amii-colour-logo.png" class="wow zoomIn" alt=""></a>
+                    <img src="/img/portfolio/Amii-colour-logo.png" class="wow zoomIn" alt="amii"></a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 text-center">
