--- a/_includes/project.html
+++ b/_includes/project.html
@@ -2,9 +2,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
+        <img src="/img/AmiiEducates2.png" class="wow zoomIn" alt="Amii Educates" id="amii-educates"></a>
         <h2>Welcome to the Amii JupyterHub</h2>
         <br><br>
-        <p>Add a description...</p>
+        <p>a place where your MI knowledge hits the road with code</p>
        </div>
     </div>
   </div>
