--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Welcome to Cybera's Data Science for Entrepreneurs JupyterHub environment!">
-    <meta name="author" content="Cybera">
+    <meta name="description" content="Welcome to Amii's JupyterHub environment!">
+    <meta name="author" content="Amii">
 
     <title>{{ site.domain }}</title>
 
